--- a/sample.ipynb
+++ b/sample.ipynb
@@ -4962,7 +4962,15 @@
     "**Beneficios para SenecaféAlpes:**\n",
     "- **Calidad:** Detección de defectos y outliers.\n",
     "- **Trazabilidad:** Clusters interpretables jerárquicamente.\n",
-    "- **Eficiencia:** Algoritmo escalable para operación diaria."
+    "- **Eficiencia:** Algoritmo escalable para operación diaria.\n",
+    "\n",
+    "### Algoritmos ###\n",
+    "\n",
+    "|  Responsable | Algoritmos    |\n",
+    "| ---------------|----------------------- |\n",
+    "|Sebastian Ramiréz | Ward (Jerárquico) |\n",
+    "|Sebastian Ramiréz | DBSCAN |\n",
+    "|Andres Molano | K-means|"
    ]
   }
  ],
