--- a/sample.ipynb
+++ b/sample.ipynb
@@ -4970,7 +4970,11 @@
     "| ---------------|----------------------- |\n",
     "|Sebastian Ramiréz | Ward (Jerárquico) |\n",
     "|Sebastian Ramiréz | DBSCAN |\n",
-    "|Andres Molano | K-means|"
+    "|Andres Molano | K-means|\n",
+    "\n",
+    "\n",
+    "### IA ###\n",
+    "se uso IA principalmente para aprender sobre algunos algoritmos y sus metodos de uso junto con informacion adicional relevante a estos y para hacer plantillas en markdown"
    ]
   }
  ],
